lib: Fix refcounting problems with Connect/Disconnect

Proxies related to particular interfaces were unref'ed even
though we never took a new reference to them, and the incorrect
GDBusProxy was used in some cases, causing crashers.

https://bugzilla.gnome.org/show_bug.cgi?id=686172